--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 
 # Ada Library Information
 *.ali
+
+# Visual Studio Code configuration
+.vscode/*
+
+# Generated executables
+.executables/*
+*/.executables/*
