--- a/PIM/.vscode/launch.json
+++ b/PIM/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "(gdb) Build & debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/home/hathoute/Documents/studies/ENSEEIHT/PIM/.executables/executable",
+            "program": "${workspaceRoot}/PIM/.executables/executable",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -19,7 +19,10 @@
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
                 }
-            ]
-        },
+            ],
+            "windows": {
+                "program": "${workspaceRoot}/PIM/.executables/executable.exe"
+            }
+        }
     ]
 }
