--- a/PIM/.vscode/launch.json
+++ b/PIM/.vscode/launch.json
@@ -12,7 +12,7 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "preLaunchTask": "debug",
+            "preLaunchTask": "debug-c",
             "setupCommands": [
                 {
                     "description": "Autoformatting",
