Fin de TP10 & TP11

--- a/TOB/.gitignore
+++ b/TOB/.gitignore
@@ -6,6 +6,7 @@ tps/.idea
 
 # Eliminer les fichiers produits par compilation.
 tps/out
+out
 
 # Eliminer les evaluations
 tps/mini-projet/evaluations
